--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,13 @@
 			<properties>
 				<javadoc.doclint.none>-Xdoclint:none</javadoc.doclint.none>
 			</properties>
+			<dependencies>
+				<dependency>
+	          		<groupId>com.simba</groupId>
+	          		<artifactId>spark</artifactId>
+	          		<version>2.6.3.1003</version>
+				</dependency>
+			</dependencies>
 		</profile>
 	</profiles>
 </project>
