--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(render)
 export(renderSql)
 export(renderSqlFile)
 export(snakeCaseToCamelCase)
+export(sparkHandleInsert)
 export(splitSql)
 export(translate)
 export(translateSingleStatement)
